[package]
name = "base1112031"
version = "0.1.1"
edition = "2021"
authors = ["WinLinux1028"]
description = "base1112031 is a way to represent numbers using all Unicode characters except ASCII control characters."
license = "MIT"
homepage = "https://winlinux1028.github.io/base1112031/"
repository = "https://github.com/WinLinux1028/base1112031"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
